<resources>
    <string name="app_name">Fency</string>
    <string name="title_activity_home">Fency!</string>
    <string name="mainLogo">Fency</string>
    <string name="fencyTitle">Fency!</string>
    <string name="tutorialbtnText">Tutorial</string>
    <string name="practicebtnText">Pratica</string>
    <string name="duelbtnText">Duello</string>
    <string name="fency_logo_des">Fency!</string>
    <string name="practice_btn_des">Modalità di pratica</string>
    <string name="music">Musica</string>
    <!--Tutorial-->
    <string name="tutorialTitle">Come si gioca</string>
    <string name="tipGuard">Inclina il dispositivo per cambiare la posizione di guardia</string>
    <string name="tipAttack">Esegui un affondo per colpire l\'avversario dove è scoperto</string>
    <string name="textHighGuard">Guardia alta</string>
    <string name="textLowGuard">Guardia bassa</string>
    <string name="textHighAttack">Attacco alto</string>
    <string name="textLowAttack">Attacco basso</string>
    <!--Practice imperi-->
    <string name="parryUp">Para in alto!</string>
    <string name="parryDown">Para in basso!</string>
    <string name="attackUp">Attacca in alto!</string>
    <string name="attackDown">Attacca in basso!</string>
    <!--Practice approbationes-->
    <string name="success">Bravo</string>
    <string name="failure">Riprova</string>
    <!--Duel-->
    <string name="dots">. . . ?</string>
    <string name="won">Hai vinto!</string>
    <string name="lost">Hai perso…</string>
    <string name="error_missing_permissions">Errore: permessi insufficienti per avviare la connessione.</string>
    <!--log-->
    <string name="scanning">Ricerca dispositivi…</string>
    <string name="endpoint_found">dispositivo trovato, connessione…</string>
    <string name="endpoint_lost">dispositivo perso, ricerca…</string>
    <string name="connection_pending">in attesa di conferma…</string>
    <string name="connection_failed">connessione fallita.</string>
    <string name="connection_rejected">connessione respinta.</string>
    <string name="connected">connessione riuscita!</string>
    <string name="disconnected">Connessione persa.</string>
    <string name="payload_lost">Errore durante la trasmissione.</string>
    <!--Game modes-->
    <string name="upto5">Alla meglio di 5</string>
</resources>